# pi-studio

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: build-release.ps1  build-release.sh  run-npm.mjs  sign-windows.ps1  smoke-pi-tau.ps1  smoke-pi-tau.sh  vendor-pi-sidecar-unix.sh  vendor-pi-sidecar-windows.ps1
src/: app.js  desktop-bridge.js  dialogs.js  file-browser.js  index.html  launcher.js  main.tsx  manifest.json  markdown.js  message-renderer.js  session-sidebar.js  state.js  style.css  sw.js  themes.js  tool-card.js  vite-env.d.ts  websocket-client.js  workbench.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/extensions/: imessage-bridge.ts  mirror-server.ts  models-refresh.ts  package-lock.json  package.json  permissions.ts  reasoning-payload.ts
src-tauri/src/: lib.rs  main.rs  settings.rs  tray.rs
src-tauri/src/commands/: api.rs  desktop.rs  extensions.rs  files.rs  git.rs  mod.rs  models.rs  packages.rs  sessions.rs  sidecar.rs
src-tauri/src/rpc/: client.rs
src-tauri/src/ws/: client.rs
src/app/: App.tsx  controller-contracts.ts  controller.ts  session-model.test.ts  session-model.ts  store.ts
src/components/: FileSidebar.tsx  Icon.tsx  Markdown.tsx  MessageList.test.tsx  MessageList.tsx  Sidebar.tsx  Views.tsx  WorkbenchChrome.tsx
src/lib/: desktop.ts  extension-ui.ts  reasoning.test.ts  reasoning.ts  slash-commands.test.ts  slash-commands.ts  theme.ts  transport.ts  types.ts  (+2 more)
(+2 files in other folders)
