[package]
name = "pi-studio"
version = "0.1.0"
description = "pi-studio desktop client for Pi"
authors = ["pi-studio Contributors"]
edition = "2021"

[lib]
name = "tau_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "6"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["macros", "process", "sync", "time"] }
tokio-tungstenite = "0.27"
url = "2"
